[gd_scene load_steps=7 format=3 uid="uid://ox7maxg57gi0"]

[ext_resource type="PackedScene" uid="uid://b0x8o5y6sjjl1" path="res://player/player.tscn" id="1_eg4cr"]
[ext_resource type="Script" path="res://game.gd" id="1_oyxtc"]
[ext_resource type="AudioStream" uid="uid://1e1c4vjyx1oo" path="res://audio/sfx/hull_breach.ogg" id="2_rs5jh"]
[ext_resource type="AudioStream" uid="uid://mb715vfd1x2x" path="res://audio/sfx/weapons/weapons_fire.ogg" id="3_ii6s5"]
[ext_resource type="PackedScene" uid="uid://ue4fkbj8d010" path="res://room.tscn" id="4_deyi7"]
[ext_resource type="AudioStream" uid="uid://cblo7nbi51gf7" path="res://audio/sfx/weapons/weapons_hit.ogg" id="4_or7ca"]

[node name="Main" type="Node"]

[node name="Game" type="Node" parent="."]
script = ExtResource("1_oyxtc")

[node name="EventTimer" type="Timer" parent="Game"]
one_shot = true

[node name="SolarFlareTimer" type="Timer" parent="Game"]
one_shot = true

[node name="DebrisTimer" type="Timer" parent="Game"]
one_shot = true

[node name="hull_breach_audio" type="AudioStreamPlayer3D" parent="Game"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
stream = ExtResource("2_rs5jh")
volume_db = 20.0

[node name="weapons_audio" type="AudioStreamPlayer3D" parent="Game"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
stream = ExtResource("3_ii6s5")
volume_db = 30.0

[node name="weapons_destroy_audio" type="AudioStreamPlayer3D" parent="Game"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
stream = ExtResource("4_or7ca")
volume_db = 30.0

[node name="Environment" type="Node" parent="."]

[node name="Room" parent="Environment" instance=ExtResource("4_deyi7")]

[node name="Player" parent="Environment/Room" instance=ExtResource("1_eg4cr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.03085, 1.44661, 2.25123)

[node name="Captain" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="Game/EventTimer" to="Game" method="_on_event_timer_timeout"]
[connection signal="timeout" from="Game/SolarFlareTimer" to="Game" method="_on_solar_flare_timer_timeout"]
[connection signal="timeout" from="Game/DebrisTimer" to="Game" method="_on_debris_timer_timeout"]
